Implementando o LoanController e EmailService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+application.mail.lateloans.message=Atenção! Você tem um empréstimo atrasado. Favor devolver o livro o mais rápido possível!
+
+application.mail.default-remetent=mail@library-api.com
+
+spring.mail.protocol=smtp
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525 
+spring.mail.username=279c86274804d0
+spring.mail.password=a5d2c647a52a0a
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
