--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.mail.password=a5d2c647a52a0a
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+management.endpoints.web.exposure.include=*
+
+logging.file=appfile.log
